// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonLoading Component snapshots should match snapshot 1`] = `
.c0 {
  display: block;
  min-height: 1px;
  width: 100%;
  background: #e4e8ea;
  position: relative;
  height: 24px;
  -webkit-animation: bcCCNc 500ms ease;
  animation: bcCCNc 500ms ease;
}

.c0:before {
  content: '';
  -webkit-animation: gxxoUf 2.5s ease-in-out infinite;
  animation: gxxoUf 2.5s ease-in-out infinite;
}

<SkeletonLoading__Wrapper
  animating={true}
  baseColor="#e4e8ea"
  shape="header"
  width="100%"
>
  <div
    className="c0"
    shape="header"
    width="100%"
  />
</SkeletonLoading__Wrapper>
`;

exports[`SkeletonLoading Component snapshots should match snapshot 2`] = `
.c0 {
  display: block;
  min-height: 1px;
  width: 100%;
  background: #e4e8ea;
  position: relative;
  height: 16px;
  -webkit-animation: bcCCNc 500ms ease;
  animation: bcCCNc 500ms ease;
}

.c0:before {
  content: '';
  -webkit-animation: gxxoUf 2.5s ease-in-out infinite;
  animation: gxxoUf 2.5s ease-in-out infinite;
}

<SkeletonLoading__Wrapper
  animating={true}
  baseColor="#e4e8ea"
  shape="text"
  width="100%"
>
  <div
    className="c0"
    shape="text"
    width="100%"
  />
</SkeletonLoading__Wrapper>
`;

exports[`SkeletonLoading Component snapshots should match snapshot 3`] = `
.c0 {
  display: block;
  min-height: 1px;
  width: 200px;
  background: #e4e8ea;
  position: relative;
  padding-top: 200px;
  -webkit-animation: bcCCNc 500ms ease;
  animation: bcCCNc 500ms ease;
}

.c0:before {
  content: '';
  -webkit-animation: gxxoUf 2.5s ease-in-out infinite;
  animation: gxxoUf 2.5s ease-in-out infinite;
}

<SkeletonLoading__Wrapper
  animating={true}
  baseColor="#e4e8ea"
  shape="square"
  width="200px"
>
  <div
    className="c0"
    shape="square"
    width="200px"
  />
</SkeletonLoading__Wrapper>
`;

exports[`SkeletonLoading Component snapshots should match snapshot 4`] = `
.c0 {
  display: block;
  min-height: 1px;
  width: 200px;
  background: #e4e8ea;
  position: relative;
  padding-top: 200px;
  border-radius: 50%;
  overflow: hidden;
  -webkit-animation: bcCCNc 500ms ease;
  animation: bcCCNc 500ms ease;
}

.c0:before {
  content: '';
  -webkit-animation: gxxoUf 2.5s ease-in-out infinite;
  animation: gxxoUf 2.5s ease-in-out infinite;
}

<SkeletonLoading__Wrapper
  animating={true}
  baseColor="#e4e8ea"
  shape="circle"
  width="200px"
>
  <div
    className="c0"
    shape="circle"
    width="200px"
  />
</SkeletonLoading__Wrapper>
`;

exports[`SkeletonLoading Component snapshots should match snapshot 5`] = `
.c0 {
  display: block;
  min-height: 1px;
  width: 50%;
  background: #e4e8ea;
  position: relative;
  height: 100px;
  -webkit-animation: bcCCNc 500ms ease;
  animation: bcCCNc 500ms ease;
}

.c0:before {
  content: '';
  -webkit-animation: gxxoUf 2.5s ease-in-out infinite;
  animation: gxxoUf 2.5s ease-in-out infinite;
}

<SkeletonLoading__Wrapper
  animating={true}
  baseColor="#e4e8ea"
  height="100px"
  width="50%"
>
  <div
    className="c0"
    height="100px"
    width="50%"
  />
</SkeletonLoading__Wrapper>
`;

exports[`SkeletonLoading Component snapshots should match snapshot 6`] = `
.c0 {
  display: block;
  min-height: 1px;
  width: 100%;
  background: #e4e8ea;
  position: relative;
  height: 16px;
  -webkit-animation: bcCCNc 500ms ease;
  animation: bcCCNc 500ms ease;
}

.c0:before {
  content: '';
  -webkit-animation: jEudrg 2.5s ease-in-out infinite;
  animation: jEudrg 2.5s ease-in-out infinite;
}

<SkeletonLoading__Wrapper
  animating={true}
  baseColor="#e4e8ea"
  color="cyan"
  shape="text"
  width="100%"
>
  <div
    className="c0"
    color="cyan"
    shape="text"
    width="100%"
  />
</SkeletonLoading__Wrapper>
`;

exports[`SkeletonLoading Component snapshots should match snapshot 7`] = `
.c0 {
  display: block;
  min-height: 1px;
  width: 100%;
  background: #333;
  position: relative;
  height: 16px;
  -webkit-animation: bcCCNc 500ms ease;
  animation: bcCCNc 500ms ease;
}

.c0:before {
  content: '';
  -webkit-animation: gxxoUf 2.5s ease-in-out infinite;
  animation: gxxoUf 2.5s ease-in-out infinite;
}

<SkeletonLoading__Wrapper
  animating={true}
  baseColor="#333"
  shape="text"
  width="100%"
>
  <div
    className="c0"
    shape="text"
    width="100%"
  />
</SkeletonLoading__Wrapper>
`;

exports[`SkeletonLoading Component snapshots should match snapshot 8`] = `
.c0 {
  display: block;
  min-height: 1px;
  width: 100%;
  background: #e4e8ea;
  position: relative;
  height: 24px;
  -webkit-animation: bcCCNc 500ms ease;
  animation: bcCCNc 500ms ease;
}

.c0:before {
  content: '';
}

<SkeletonLoading__Wrapper
  animating={false}
  baseColor="#e4e8ea"
  shape="header"
  width="100%"
>
  <div
    className="c0"
    shape="header"
    width="100%"
  />
</SkeletonLoading__Wrapper>
`;
